--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
+    <header class="header">dwd
       <di class="header-div container">
       <nav class="header-nav">
         <a class="link logo" href="./index.html">
