--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="./css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
+    <!--<header class="header">
       <div class="header-div container">
       <nav class="header-nav">
         <a class="link logo" href="./index.html">
@@ -37,15 +37,15 @@
         </ul>
         </address>
       </div>
-    </header>
+    </header>-->
     <main>
-      <section class="sec-one">
+      <!--<section class="sec-one">
         <div class="div-one container">
         <h1 class="sec-h-one">Effective Solutions for Your Business</h1>
         <button class="sec-button" data-modal-open type="button">Order Service</button>
         </div>
-      </section>
-      <section class="sec-two">
+      </section>-->
+      <!--<section class="sec-two">
         <div class="container">
         <h2 class="visually-hidden">prikol</h2>
         <ul class="sec-two-list list">
@@ -99,8 +99,8 @@
           </li>
         </ul>
       </div>
-      </section>
-      <section class="sec-three">
+      </section>-->
+      <!--<section class="sec-three">
         <div class="container">
         <h2 class="sec-three-h-two">What are we doing</h2>
         <ul class="sec-three-list list">
@@ -125,8 +125,8 @@
           </li>
         </ul>
       </div>
-      </section>
-      <section class="sec-four">
+      </section>-->
+      <!--<section class="sec-four">
         <div class="container">
         <h2 class="sec-four-h-two">Our Team</h2>
         <ul class="sec-four-list list">
@@ -280,8 +280,8 @@
           </li>
         </ul>
       </div>
-      </section>
-      <section class="sec-five">
+      </section>-->
+      <!--<section class="sec-five">
         <div class="container">
           <h2 class="sec-five-h-two">Customers</h2>
           <ul class="sec-five-list list">
@@ -329,9 +329,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
     </main>
-    <footer class="footer">
+    <!--<footer class="footer">
       <div class="container footer-div">
         <div class="footer-main">
         <a class="link logo" href="./index.html">
@@ -387,8 +387,8 @@
         </form>
       </div>
     </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer>-->
+    <!--<div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" data-modal-close class="modal-button">
           <svg width="8" height="8" class="modal-icon">
@@ -459,7 +459,7 @@
           <button type="submit" class="modal-form-button">Send</button>
         </form>
       </div>
-    </div>
+    </div>-->
     <script src="./js/modal.js"></script>
   </body>
 </html>
