--- a/index.html
+++ b/index.html
@@ -100,12 +100,17 @@
         </ul>
       </div>
       </section>-->
-      <!--<section class="sec-three">
+      <section class="sec-three">
         <div class="container">
         <h2 class="sec-three-h-two">What are we doing</h2>
         <ul class="sec-three-list list">
           <li class="sec-three-item">
-            <img src="./images/1.jpg" width="360" height="300" alt="Notebook" />
+            <img 
+                 src="./images/1.jpg" 
+                 width="360" 
+                 height="300" 
+                 alt="Notebook" 
+              />
           </li>
           <li class="sec-three-item">
             <img
@@ -125,7 +130,7 @@
           </li>
         </ul>
       </div>
-      </section>-->
+      </section>
       <!--<section class="sec-four">
         <div class="container">
         <h2 class="sec-four-h-two">Our Team</h2>
