--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </ul>
       </div>
       </section>-->
-      <section class="sec-three">
+      <!--<section class="sec-three">
         <div class="container">
         <h2 class="sec-three-h-two">What are we doing</h2>
         <ul class="sec-three-list list">
@@ -130,8 +130,8 @@
           </li>
         </ul>
       </div>
-      </section>
-      <!--<section class="sec-four">
+      </section>-->
+      <section class="sec-four">
         <div class="container">
         <h2 class="sec-four-h-two">Our Team</h2>
         <ul class="sec-four-list list">
@@ -285,7 +285,7 @@
           </li>
         </ul>
       </div>
-      </section>-->
+      </section>
       <!--<section class="sec-five">
         <div class="container">
           <h2 class="sec-five-h-two">Customers</h2>
