--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </ul>
       </div>
       </section>-->
-      <section class="sec-four">
+      <section class="section sec-four">
         <div class="container">
         <h2 class="sec-four-h-two">Our Team</h2>
         <ul class="sec-four-list list">
