--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button class="sec-button" data-modal-open type="button">Order Service</button>
         </div>
       </section>-->
-      <!--<section class="sec-two">
+      <section class="sec-two">
         <div class="container">
         <h2 class="visually-hidden">prikol</h2>
         <ul class="sec-two-list list">
@@ -99,7 +99,7 @@
           </li>
         </ul>
       </div>
-      </section>-->
+      </section>
       <!--<section class="sec-three">
         <div class="container">
         <h2 class="sec-three-h-two">What are we doing</h2>
