--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
       </div>
     </header>-->
     <main>
-      <!--<section class="sec-one">
+      <!--<section class="section sec-one">
         <div class="div-one container">
         <h1 class="sec-h-one">Effective Solutions for Your Business</h1>
         <button class="sec-button" data-modal-open type="button">Order Service</button>
         </div>
       </section>-->
-      <section class="sec-two">
+      <section class="section sec-two">
         <div class="container">
         <h2 class="visually-hidden">prikol</h2>
         <ul class="sec-two-list list">
@@ -100,7 +100,7 @@
         </ul>
       </div>
       </section>
-      <!--<section class="sec-three">
+      <!--<section class="section sec-three">
         <div class="container">
         <h2 class="sec-three-h-two">What are we doing</h2>
         <ul class="sec-three-list list">
@@ -286,7 +286,7 @@
         </ul>
       </div>
       </section>
-      <!--<section class="sec-five">
+      <!--<section class="section sec-five">
         <div class="container">
           <h2 class="sec-five-h-two">Customers</h2>
           <ul class="sec-five-list list">
