--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       </div>
     </header>-->
     <main>
-      <!--<section class="section sec-one">
+      <section class="section sec-one">
         <div class="div-one container">
         <h1 class="sec-h-one">Effective Solutions for Your Business</h1>
         <button class="sec-button" data-modal-open type="button">Order Service</button>
         </div>
-      </section>-->
+      </section>
       <section class="section sec-two">
         <div class="container">
         <h2 class="visually-hidden">prikol</h2>
