--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </ul>
       </div>
       </section>
-      <!--<section class="section sec-three">
+      <section class="section sec-three">
         <div class="container">
         <h2 class="sec-three-h-two">What are we doing</h2>
         <ul class="sec-three-list list">
@@ -130,7 +130,7 @@
           </li>
         </ul>
       </div>
-      </section>-->
+      </section>
       <section class="section sec-four">
         <div class="container">
         <h2 class="sec-four-h-two">Our Team</h2>
