--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link href="./css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <!--<header class="header">
+    <header class="header">
       <div class="header-div container">
       <nav class="header-nav">
         <a class="link logo" href="./index.html">
         Web<span class="accent">Studio</span>
         </a>
+        <div class="hmhm">
         <ul class="header-list list">
           <li class="header-item">
             <a class="stick header-link link" href="./index.html">Studio</a>
@@ -37,7 +38,8 @@
         </ul>
         </address>
       </div>
-    </header>-->
+      </div>
+    </header>
     <main>
       <section class="section sec-one">
         <div class="div-one container">
