--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </ul>
       </div>
       </section>
-      <section class="section sec-three">
+      <section class="sec-three"><!--сюда класс section?-->
         <div class="container">
         <h2 class="sec-three-h-two">What are we doing</h2>
         <ul class="sec-three-list list">
