--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <a class="link logo" href="./index.html">
         Web<span class="accent">Studio</span>
         </a>
-        <div class="hmhm">
         <ul class="header-list list">
           <li class="header-item">
             <a class="stick header-link link" href="./index.html">Studio</a>
@@ -37,11 +36,13 @@
           <li class="header-number link"><a class="header-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
         </address>
-      </div>
+        <svg width="32" height="22" class="header-menu">
+          <use href="./images/icons.svg#icon-menu"></use>
+        </svg>
       </div>
     </header>
     <main>
-      <section class="section sec-one">
+      <section class="sec-one">
         <div class="div-one container">
         <h1 class="sec-h-one">Effective Solutions for Your Business</h1>
         <button class="sec-button" data-modal-open type="button">Order Service</button>
