--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </ul>
       </div>
       </section>
-      <!--<section class="section sec-five">
+      <section class="section sec-five">
         <div class="container">
           <h2 class="sec-five-h-two">Customers</h2>
           <ul class="sec-five-list list">
@@ -337,7 +337,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
     </main>
     <!--<footer class="footer">
       <div class="container footer-div">
