--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         </address>
       </header>-->
       <main>
-        <!--<section class="buttons-list">
+        <section class="buttons-list">
           <div class="container">
           <h1 class="visually-hidden">joke</h1>
           <ul class="buttons-ul list">
@@ -206,7 +206,7 @@
             </li>
           </ul>
         </div>
-        </section>-->
+        </section>
       </main>
       <!--<footer class="footer">
         <div class="container footer-div">
