--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </div>
       </section>
     </main>
-    <!--<footer class="footer">
+    <footer class="section footer">
       <div class="container footer-div">
         <div class="footer-main">
         <a class="link logo" href="./index.html">
@@ -395,7 +395,7 @@
         </form>
       </div>
     </div>
-    </footer>-->
+    </footer>
     <!--<div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" data-modal-close class="modal-button">
