--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         </address>
       </header>-->
       <main>
-        <section class="buttons-list">
+        <!--<section class="buttons-list">
           <div class="container">
           <h1 class="visually-hidden">joke</h1>
           <ul class="buttons-ul list">
@@ -207,7 +207,7 @@
           </ul>
         </div>
         </section>
-      </main>
+      </main>-->
       <!--<footer class="footer">
         <div class="container footer-div">
           <div class="footer-main">
