--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <!--<header class="header">
+    <header class="header">
       <di class="header-div container">
       <nav class="header-nav">
         <a class="link logo" href="./index.html">
@@ -37,9 +37,9 @@
           </ul>
           </div>
         </address>
-      </header>-->
+      </header>
       <main>
-        <!--<section class="buttons-list">
+        <section class="buttons-list">
           <div class="container">
           <h1 class="visually-hidden">joke</h1>
           <ul class="buttons-ul list">
@@ -207,8 +207,8 @@
           </ul>
         </div>
         </section>
-      </main>-->
-      <!--<footer class="footer">
+      </main>
+      <footer class="footer">
         <div class="container footer-div">
           <div class="footer-main">
           <a class="link logo" href="./index.html">
@@ -264,6 +264,6 @@
           </form>
         </div>
       </div>
-    </footer>-->
+    </footer>
 </body>
 </html>
