--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       </div>
     </div>
     </footer>
-    <!--<div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" data-modal-close class="modal-button">
           <svg width="8" height="8" class="modal-icon">
@@ -467,7 +467,7 @@
           <button type="submit" class="modal-form-button">Send</button>
         </form>
       </div>
-    </div>-->
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
