--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
       <address class="header-add">
-        <ul class="list">
+        <ul class="list" style="display: block;">
           <li class="header-mail link"><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li class="header-number link"><a class="header-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
