--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="header-div container">
       <nav class="header-nav">
-        <a class="link logo" href="./index.html">
+        <a class="tipa-logo link logo" href="./index.html">
         Web<span class="accent">Studio</span>
         </a>
         <ul class="header-list list">
@@ -471,5 +471,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
