--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="header-div container">
       <nav class="header-nav">
-        <a class="tipa-logo link logo" href="./index.html">
+        <a class="link logo" href="./index.html">
         Web<span class="accent">Studio</span>
         </a>
         <ul class="header-list list">
