--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           </li>
         </ul>
       </nav>
-      <address class="header-add">
+      <address class="header-add">  
         <ul class="add-list list">
           <li class="header-mail link"><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li class="header-number link"><a class="header-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
         </address>
-        <button type="button" class="header-but-menu">
+        <button type="button" width="40" height="40" class="header-but-menu">
         <svg width="32" height="22" class="header-menu">
           <use href="./images/icons.svg#icon-menu"></use>
         </svg>
