--- a/index.html
+++ b/index.html
@@ -470,7 +470,10 @@
         </form>
       </div>
     </div>
+    <div class="menu-container js-menu-container">
+
+    </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
