--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="header-number link"><a class="header-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
         </address>
-        <button type="button"  width="40" height="40" class="header-but-menu">
+        <button type="button" width="40" height="40" class="header-but-menu js-open-menu">
         <svg width="32" height="22" class="header-menu">
           <use href="./images/icons.svg#icon-menu"></use>
         </svg>
