--- a/index.html
+++ b/index.html
@@ -473,8 +473,20 @@
         </form>
       </div>
     </div>
-    <div class="menu-container js-menu-container">
-      
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="menu-icon"
+          width="8"
+          height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+      </button>
+      <ul class="mobile-menu">
+        <li><a href="" class="link">About</a></li>
+        <li><a href="" class="link">Products</a></li>
+        <li><a href="" class="link">Contacts</a></li>
+        <li><a href="" class="link">Career</a></li>
+      </ul>
     </div>
     <script src="./js/modal.js"></script>
     <script defer src="./js/mobile-menu.js"></script>
