--- a/index.html
+++ b/index.html
@@ -474,11 +474,9 @@
       </div>
     </div>
     <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-        <svg class="menu-icon"
-          width="8"
-          height="8">
-          <use href="./images/icons.svg#icon-close"></use>
+      <button type="button" class="menu-toggle js-close-menu">
+          <svg width="8" height="8" class="menu-icon">
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
       </button>
       <ul class="mobile-menu">
