--- a/index.html
+++ b/index.html
@@ -480,10 +480,48 @@
           </svg>
       </button>
       <ul class="mobile-menu">
-        <li><a href="" class="link">About</a></li>
-        <li><a href="" class="link">Products</a></li>
+        <li><a href="" class="link">Studio</a></li>
+        <li><a href="" class="link">Portfolio</a></li>
         <li><a href="" class="link">Contacts</a></li>
-        <li><a href="" class="link">Career</a></li>
+      </ul>
+
+      <ul class="mobile-contacts">
+        <li class="mob-number link">
+          <a class="menu-mob-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+        <li class="mob-mail link">
+          <a class="menu-mob-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+      </ul>
+      <ul class="menu-soc list">
+        <li class="menu-li">
+          <a class="menu-link link" href="">
+            <svg width="24" height="24" class="menu-soc-icon">
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-li">
+          <a class="menu-link link" href="">
+            <svg width="24" height="24" class="menu-soc-icon">
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-li">
+          <a class="menu-link link" href="">
+            <svg width="24" height="24" class="menu-soc-icon">
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-li">
+          <a class="menu-link link" href="">
+            <svg width="24" height="24" class="menu-soc-icon">
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </a>
+        </li>
       </ul>
     </div>
     <script src="./js/modal.js"></script>
