--- a/index.html
+++ b/index.html
@@ -480,9 +480,9 @@
           </svg>
       </button>
       <ul class="mobile-menu">
-        <li><a href="" class="link">Studio</a></li>
-        <li><a href="" class="link">Portfolio</a></li>
-        <li><a href="" class="link">Contacts</a></li>
+        <li><a href="" class="mob-menu-page1 link">Studio</a></li>
+        <li><a href="" class="mob-menu-page2 link">Portfolio</a></li>
+        <li><a href="" class="mob-menu-page3 link">Contacts</a></li>
       </ul>
 
       <ul class="mobile-contacts">
