--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@
 
       <ul class="mobile-contacts">
         <li class="mob-number link">
-          <a class="menu-mob-contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a class="menu-mob-number link" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
         <li class="mob-mail link">
-          <a class="menu-mob-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="menu-mob-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
       </ul>
       <ul class="menu-soc list">
