--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
         <h2 class="sec-four-h-two">Our Team</h2>
         <ul class="sec-four-list list">
           <li class="sec-four-item">
-            <img src="./images/1dude.jpg" width="264" height="260" alt="Boy" />
+            <img src="./images/1dude.jpg" 
+            srcset=" s "
+            width="264" 
+            height="260" 
+            alt="Boy" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Mark Guerrero</h3>
             <p class="sec-four-work">Product Designer</p>
