--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <ul class="sec-four-list list">
           <li class="sec-four-item">
             <img src="./images/1dude.jpg" 
-            srcset=" s "
+            srcset=""
             width="264" 
             height="260" 
             alt="Boy" />
