--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <li class="sec-four-item">
             <img src="./images/1dude.jpg"
             width="264" 
-            height="260" sd
+            height="260"
             alt="Boy" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Mark Guerrero</h3>
