--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
         <ul class="sec-four-list list">
           <li class="sec-four-item">
             <img src="./images/1dude.jpg"
-            width="264" 
+            width="264"
+            srcset="  "
             height="260"
             alt="Boy" />
             <div class="sec-four-block">
