--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
           <li class="sec-four-item">
             <img src="./images/1dude.jpg"
             width="264"
-            srcset="  "
+            srcset="./images/images-mob/1dude_mob@1x.jpg 
+                    ./images/images-mob/1dude_mob@2x.jpg
+                    ./images/images-tab/1dude_mob@1x.jpg
+                    ./images/images-tab/1dude_mob@2x.jpg
+                    ./images/images-pc/1dude_mob@1x.jpg
+                    ./images/images-pc/1dude_mob@2x.jpg"
             height="260"
             alt="Boy" />
             <div class="sec-four-block">
