--- a/index.html
+++ b/index.html
@@ -144,16 +144,11 @@
         <h2 class="sec-four-h-two">Our Team</h2>
         <ul class="sec-four-list list">
           <li class="sec-four-item">
-            <img src="./images/1dude.jpg"
+            <img src="./images/images-mob/1dude_mob@1x.jpg"
             width="264"
-            srcset="./images/images-mob/1dude_mob@1x.jpg 
-                    ./images/images-mob/1dude_mob@2x.jpg
-                    ./images/images-tab/1dude_mob@1x.jpg
-                    ./images/images-tab/1dude_mob@2x.jpg
-                    ./images/images-pc/1dude_mob@1x.jpg
-                    ./images/images-pc/1dude_mob@2x.jpg"
+            srcset=""
             height="260"
-            alt="Boy" />
+            alt="Mark Guerrero" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Mark Guerrero</h3>
             <p class="sec-four-work">Product Designer</p>
@@ -190,7 +185,7 @@
             </div>
           </li>
           <li class="sec-four-item">
-            <img src="./images/2dude.jpg" width="264" height="260" alt="Boy" />
+            <img src="./images/2dude.jpg" width="264" height="260" alt="Tom Ford" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Tom Ford</h3>
             <p class="sec-four-work">Frontend Developer</p>
@@ -227,7 +222,7 @@
             </div>
           </li>
           <li class="sec-four-item">
-            <img src="./images/3girl.jpg" width="264" height="260" alt="Girl" />
+            <img src="./images/3girl.jpg" width="264" height="260" alt="Camila Garcia" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Camila Garcia</h3>
             <p class="sec-four-work">Marketing</p>
@@ -264,7 +259,7 @@
             </div>
           </li>
           <li class="sec-four-item">
-            <img src="./images/4dude.jpg" width="264" height="260" alt="Boy" />
+            <img src="./images/4dude.jpg" width="264" height="260" alt="Daniel Wilson" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Daniel Wilson</h3>
             <p class="sec-four-work">UI Designer</p>
