--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h2 class="sec-four-h-two">Our Team</h2>
         <ul class="sec-four-list list">
           <li class="sec-four-item">
-            <img src="./images/images-mob/1dude_mob@1x.jpg"
+            <img src="./images/1dude.jpg"
             width="264"
             srcset=""
             height="260"
