--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
           <li class="sec-four-item">
             <img src="./images/1dude.jpg"
             width="264"
-            srcset=""
+            srcset="./images/1dude.jpg 1x"
+            srcset="./images/1dude@2x.jpg 2x"
             height="260"
             alt="Mark Guerrero" />
             <div class="sec-four-block">
