--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         <ul class="sec-four-list list">
           <li class="sec-four-item">
             <img src="./images/1dude.jpg"
-            width="264"
             srcset="./images/1dude.jpg 1x"
             srcset="./images/1dude@2x.jpg 2x"
+            width="264"
             height="260"
             alt="Mark Guerrero" />
             <div class="sec-four-block">
@@ -186,7 +186,12 @@
             </div>
           </li>
           <li class="sec-four-item">
-            <img src="./images/2dude.jpg" width="264" height="260" alt="Tom Ford" />
+            <img src="./images/2dude.jpg" 
+            srcset="./images/2dude.jpg 1x"
+            srcset="./images/2dude@2x.jpg 2x"
+            width="264" 
+            height="260" 
+            alt="Tom Ford" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Tom Ford</h3>
             <p class="sec-four-work">Frontend Developer</p>
@@ -223,7 +228,12 @@
             </div>
           </li>
           <li class="sec-four-item">
-            <img src="./images/3girl.jpg" width="264" height="260" alt="Camila Garcia" />
+            <img src="./images/3girl.jpg" 
+            srcset="./images/3girl.jpg 1x"
+            srcset="./images/3girl@2x.jpg 2x"
+            width="264" 
+            height="260" 
+            alt="Camila Garcia" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Camila Garcia</h3>
             <p class="sec-four-work">Marketing</p>
@@ -260,7 +270,12 @@
             </div>
           </li>
           <li class="sec-four-item">
-            <img src="./images/4dude.jpg" width="264" height="260" alt="Daniel Wilson" />
+            <img src="./images/4dude.jpg" 
+            srcset="./images/4dude.jpg 1x"
+            srcset="./images/4dude@2x.jpg 2x"
+            width="264" 
+            height="260" 
+            alt="Daniel Wilson" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Daniel Wilson</h3>
             <p class="sec-four-work">UI Designer</p>
