--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
         <ul class="sec-four-list list">
           <li class="sec-four-item">
             <img src="./images/1dude.jpg"
-            srcset="./images/1dude.jpg 1x"
-            srcset="./images/1dude@2x.jpg 2x"
+            srcset="./images/1dude.jpg 1x, ./images/1dude@2x.jpg 2x"
             width="264"
             height="260"
             alt="Mark Guerrero" />
@@ -187,8 +186,7 @@
           </li>
           <li class="sec-four-item">
             <img src="./images/2dude.jpg" 
-            srcset="./images/2dude.jpg 1x"
-            srcset="./images/2dude@2x.jpg 2x"
+            srcset="./images/2dude.jpg 1x ./images/2dude@2x.jpg 2x"
             width="264" 
             height="260" 
             alt="Tom Ford" />
@@ -229,8 +227,7 @@
           </li>
           <li class="sec-four-item">
             <img src="./images/3girl.jpg" 
-            srcset="./images/3girl.jpg 1x"
-            srcset="./images/3girl@2x.jpg 2x"
+            srcset="./images/3girl.jpg 1x ./images/3girl@2x.jpg 2x"
             width="264" 
             height="260" 
             alt="Camila Garcia" />
@@ -271,8 +268,7 @@
           </li>
           <li class="sec-four-item">
             <img src="./images/4dude.jpg" 
-            srcset="./images/4dude.jpg 1x"
-            srcset="./images/4dude@2x.jpg 2x"
+            srcset="./images/4dude.jpg 1x ./images/4dude@2x.jpg 2x"
             width="264" 
             height="260" 
             alt="Daniel Wilson" />
