--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <ul class="sec-four-list list">
           <li class="sec-four-item">
             <img src="./images/1dude.jpg"
-            srcset="./images/1dude.jpg 1x ./images/1dude@2x.jpg 2x"
+            srcset="./images/1dude.jpg 1x, ./images/1dude@2x.jpg 2x"
             alt="Mark Guerrero" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Mark Guerrero</h3>
@@ -184,7 +184,7 @@
           </li>
           <li class="sec-four-item">
             <img src="./images/2dude.jpg" 
-            srcset="./images/2dude.jpg 1x ./images/2dude@2x.jpg 2x" 
+            srcset="./images/2dude.jpg 1x, ./images/2dude@2x.jpg 2x" 
             alt="Tom Ford" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Tom Ford</h3>
@@ -223,7 +223,7 @@
           </li>
           <li class="sec-four-item">
             <img src="./images/3girl.jpg" 
-            srcset="./images/3girl.jpg 1x ./images/3girl@2x.jpg 2x" 
+            srcset="./images/3girl.jpg 1x, ./images/3girl@2x.jpg 2x" 
             alt="Camila Garcia" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Camila Garcia</h3>
@@ -262,7 +262,7 @@
           </li>
           <li class="sec-four-item">
             <img src="./images/4dude.jpg" 
-            srcset="./images/4dude.jpg 1x ./images/4dude@2x.jpg 2x"
+            srcset="./images/4dude.jpg 1x, ./images/4dude@2x.jpg 2x"
             alt="Daniel Wilson" />
             <div class="sec-four-block">
             <h3 class="sec-four-name">Daniel Wilson</h3>
