--- a/index.html
+++ b/index.html
@@ -488,9 +488,9 @@
           </svg>
       </button>
       <ul class="mobile-menu">
-        <li><a href="" class="mob-menu-page1 link">Studio</a></li>
-        <li><a href="" class="mob-menu-page2 link">Portfolio</a></li>
-        <li><a href="" class="mob-menu-page3 link">Contacts</a></li>
+        <li class="mobile-menu-li1"><a href="" class="mob-menu-page1 link">Studio</a></li>
+        <li class="mobile-menu-li2"><a href="" class="mob-menu-page2 link">Portfolio</a></li>
+        <li class="mobile-menu-li3"><a href="" class="mob-menu-page3 link">Contacts</a></li>
       </ul>
 
       <ul class="mobile-contacts">
