--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </ul>
         </address>
         <button type="button"
+        style="width: 40px; height: 40px;"
         class="header-but-menu js-open-menu"
         aria-expanded="false"
         aria-controls="mobile-menu">
