--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <li class="sec-three-item">
             <img 
                  src="./images/1.jpg" 
+                 srcset="./images/1.jpg 1x, ./images/1@2x.jpg 2x"
                  width="360" 
                  height="300" 
                  alt="Notebook" 
@@ -124,6 +125,7 @@
           <li class="sec-three-item">
             <img
               src="./images/2.jpg"
+              srcset=""
               width="360"
               height="300"
               alt="Smartphone"
@@ -132,6 +134,7 @@
           <li class="sec-three-item">
             <img
               src="./images/1-2.jpg"
+              srcset=""
               width="360"
               height="300"
               alt="Notebook and smartphone"
