--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <li class="sec-three-item">
             <img
               src="./images/2.jpg"
-              srcset=""
+              srcset="./images/2.jpg 1x, ./images/2@2x.jpg 2x"
               width="360"
               height="300"
               alt="Smartphone"
@@ -134,7 +134,7 @@
           <li class="sec-three-item">
             <img
               src="./images/1-2.jpg"
-              srcset=""
+              srcset="./images/1-2.jpg 1x, ./images/1-2@2x.jpg 2x"
               width="360"
               height="300"
               alt="Notebook and smartphone"
