--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
           </svg>
       </button>
       <ul class="mobile-menu">
-        <li class="mobile-menu-li1"><a href="" class="mob-menu-page1 link">Studio</a></li>
-        <li class="mobile-menu-li2"><a href="" class="mob-menu-page2 link">Portfolio</a></li>
+        <li class="mobile-menu-li1"><a href="./index.html" class="mob-menu-page1 link">Studio</a></li>
+        <li class="mobile-menu-li2"><a href="./portfolio.html" class="mob-menu-page2 link">Portfolio</a></li>
         <li class="mobile-menu-li3"><a href="" class="mob-menu-page3 link">Contacts</a></li>
       </ul>
 
