--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a class="stick header-link link" href="./index.html">Studio</a>
+            <a class="stick header-active header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
