--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="stick-port header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="stick-port header-active header-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
